--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Завантаження зображення</title>
+    <title>Завантаження кількох зображень на Canvas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,16 +23,33 @@
         .controls {
             margin-top: 20px;
         }
+
+        .controls button,
+        .controls input {
+            margin: 0 10px;
+            padding: 10px 15px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
-    <h1>Завантажити та відобразити зображення</h1>
-    <input type="file" id="fileInput" accept="image/*">
+    <h1>Завантаження кількох зображень на Canvas</h1>
+    <input type="file" id="fileInput" accept="image/*" multiple>
+
+    <!-- Canvas для відображення зображення -->
+    <canvas id="canvas" width="800" height="600"></canvas>
+
+    <!-- Кнопки для управління -->
     <div class="controls">
         <button id="clearCanvas">Очистити Canvas</button>
+        <button id="eraserButton">Стирачка</button>
+        <label for="layerSelect">Вибрати шар: </label>
+        <select id="layerSelect">
+            <!-- Шари зображень будуть додаватися динамічно -->
+        </select>
     </div>
-    <canvas id="canvas" width="500" height="500"></canvas>
 
     <script>
         // Отримуємо елементи для роботи
@@ -40,82 +57,159 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d'); // Отримуємо контекст canvas
         const clearButton = document.getElementById('clearCanvas');
+        const eraserButton = document.getElementById('eraserButton');
+        const layerSelect = document.getElementById('layerSelect');
 
-        // Додаємо обробник події для завантаження зображення
+        let isErasing = false;  // Вказує, чи активована стирачка
+        let isDrawing = false;  // Вказує, чи активне малювання (стирка)
+        let images = []; // Масив для збереження шарів зображень
+        let currentLayerIndex = 0;  // Індекс поточного шару
+
+        // Обробка завантаження зображень
         fileInput.addEventListener('change', function (event) {
-            const file = event.target.files[0];
-            if (file) {
-                // Створюємо об'єкт для зображення
-                const img = new Image();
-                // Створюємо URL для завантаженого файлу
-                const imageUrl = URL.createObjectURL(file);
-                img.src = imageUrl;
+            const files = event.target.files;
 
-                // Відображаємо зображення на Canvas після його завантаження
-                img.onload = function () {
-                    // Очищаємо попереднє зображення (якщо є)
-                    ctx.clearRect(0, 0, canvas.width, canvas.height);
+            // Завантажуємо кожне зображення і додаємо в масив шарів
+            var uploadFilesPromise = new Promise((resolve) => {
+                let loadedImagesCount = 0; // Лічильник завантажених зображень
+                Array.from(files).forEach((file, index) => {
+                    const img = new Image();
+                    const imageUrl = URL.createObjectURL(file);
+                    img.src = imageUrl;
 
-                    // Масштабуємо зображення, щоб воно відповідало розміру canvas
-                    let scale = Math.min(canvas.width / img.width, canvas.height / img.height);
-                    let x = (canvas.width / 2) - (img.width / 2) * scale;
-                    let y = (canvas.height / 2) - (img.height / 2) * scale;
+                    img.onload = function () {
+                        console.warn("push")
+                        images.push({ img, x: 0, y: 0 }); // Додаємо зображення в масив
+                        URL.revokeObjectURL(imageUrl);
 
-                    // Малюємо зображення на canvas
-                    ctx.drawImage(img, x, y, img.width * scale, img.height * scale);
+                        loadedImagesCount++; // Збільшуємо лічильник завантажених зображень
 
-                    // Звільняємо URL-об'єкт для запобігання утечці пам'яті
-                    URL.revokeObjectURL(imageUrl);
-                }
-            }
+                        img.onload = null;
+
+                        // Якщо всі зображення завантажено, виконуємо наступні дії
+                        if (loadedImagesCount === files.length) {
+                            resolve();
+                        }
+                    }
+                });
+            })
+
+            uploadFilesPromise.then(() => {
+                currentLayerIndex = images.length - 1;
+                updateLayerOptions(); // Оновлюємо список шарів
+                drawLayers(); // Малюємо всі шари
+            })
+
+        });
+
+        // Оновлення списку шарів у випадаючому меню
+        function updateLayerOptions() {
+            layerSelect.innerHTML = '';
+            images.forEach((_, index) => {
+                const option = document.createElement('option');
+                option.value = index;
+                option.textContent = `Шар ${index + 1}`;
+                layerSelect.appendChild(option);
+            });
+            layerSelect.value = images.length - 1;
+        }
+
+        // Малює всі шари зображень на canvas
+        function drawLayers() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height); // Очищаємо canvas
+
+            console.warn("DRAW", images, currentLayerIndex)
+            images
+                //.filter((_, index) => index <= currentLayerIndex)
+                .forEach(({ img, x, y }) => {
+                    ctx.drawImage(img, x, y, canvas.width, canvas.height);
+                });
+        }
+
+        // Обробка вибору шару для стирання
+        layerSelect.addEventListener('change', function (event) {
+            currentLayerIndex = parseInt(event.target.value, 10);
+
+            drawLayers()
         });
 
         // Обробка натискання кнопки "Очистити Canvas"
         clearButton.addEventListener('click', function () {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            images = [];  // Очищаємо всі шари
+
+            currentLayerIndex = images.length - 1;
+            drawLayers(); // Очищаємо canvas
+            updateLayerOptions(); // Оновлюємо список шарів
         });
 
+        // Обробка натискання кнопки "Стирачка"
+        eraserButton.addEventListener('click', function () {
+            isErasing = !isErasing;  // Перемикання режиму стирачки
+            eraserButton.textContent = isErasing ? 'Стирачка активна' : 'Стирачка';
+        });
 
-
-        // Стирачка
-        let isErasing = false;  // Вказує, чи активована стирачка
+        // Обробка події натискання миші на Canvas
         canvas.addEventListener('mousedown', function (event) {
-            isErasing = true;
-        });
-
-        // Обробка відпускання кнопки миші
-        canvas.addEventListener('mouseup', function () {
-            isErasing = false; // Завершення малювання (стирки)
+            if (isErasing) {
+                isDrawing = true; // Початок малювання (стирки)
+                erase(event);
+            }
         });
 
         // Обробка руху миші на Canvas
         canvas.addEventListener('mousemove', function (event) {
-            if (isErasing) {
+            if (isDrawing && isErasing) {
                 erase(event); // Стирання зображення при русі миші
             }
         });
 
+        // Обробка відпускання кнопки миші
+        canvas.addEventListener('mouseup', function () {
+            isDrawing = false; // Завершення малювання (стирки)
+        });
 
-        // Функція для стирання зображення на Canvas
+        // Обробка виходу миші за межі Canvas
+        canvas.addEventListener('mouseleave', function () {
+            isDrawing = false; // Завершення малювання (стирки)
+        });
+
+        // Функція для стирання зображення на поточному шарі Canvas
         function erase(event) {
-            const rect = canvas.getBoundingClientRect(); // Позиція canvas на сторінці
-            const x = event.clientX - rect.left; // Позиція миші відносно canvas
+            if (!images[currentLayerIndex]) return; // Перевірка чи є поточний шар
+
+            // Створюємо тимчасовий canvas для стирання
+            const tempCanvas = document.createElement('canvas');
+            const tempCtx = tempCanvas.getContext('2d');
+            tempCanvas.width = canvas.width;
+            tempCanvas.height = canvas.height;
+
+            // Малюємо поточний шар на тимчасовий canvas
+            tempCtx.drawImage(images[currentLayerIndex].img, 0, 0, canvas.width, canvas.height);
+
+            // Розраховуємо позиції миші на canvas
+            const rect = canvas.getBoundingClientRect();
+            const x = event.clientX - rect.left;
             const y = event.clientY - rect.top;
 
             // Встановлюємо параметри стирачки
-            ctx.globalCompositeOperation = 'destination-out'; // Змішуємо кольори для стирки
-            ctx.lineWidth = 20;  // Розмір стирачки
-            ctx.lineCap = 'round'; // Кінці ліній стирачки - округлі
-            ctx.strokeStyle = 'rgba(0,0,0,1)'; // Колір стирачки
+            tempCtx.globalCompositeOperation = 'destination-out'; // Змішуємо кольори для стирки
+            tempCtx.lineWidth = 20;  // Розмір стирачки
+            tempCtx.lineCap = 'round'; // Кінці ліній стирачки - округлі
+            tempCtx.strokeStyle = 'rgba(0,0,0,1)'; // Колір стирачки
 
             // Малюємо лінію в режимі стирачки
-            ctx.beginPath();
-            ctx.moveTo(x, y);
-            ctx.lineTo(x, y);
-            ctx.stroke();
+            tempCtx.beginPath();
+            tempCtx.moveTo(x, y);
+            tempCtx.lineTo(x, y);
+            tempCtx.stroke();
 
-            // Повертаємо звичайний режим змішування
-            ctx.globalCompositeOperation = 'source-over';
+            //tempCtx.globalCompositeOperation = 'source-over';
+
+            // Оновлюємо зображення поточного шару
+            images[currentLayerIndex].img.src = tempCanvas.toDataURL();
+
+            // Оновлюємо всі шари на основному canvas
+            drawLayers();
         }
     </script>
 </body>
